# AgentChat

./: .gitignore  AgentChat_Issue_001.md  AgentChat_Issue_002.md  AgentChat_SDD.md  POC_PLAN.md  PRODUCT_REQUIREMENTS.md  README.md  TASK_BREAKDOWN.md  TECHNICAL_SPECIFICATIONS.md  docker-compose.yml  run.sh
backend/: Dockerfile.backend  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 44a3e635690b_initial_migration.py  bbbb1111bbbb_add_password_hash.py
backend/app/: main.py
backend/app/api/: __init__.py  auth.py  participants.py  rooms.py  websockets.py
backend/app/core/: config.py  security.py
backend/app/db/: database.py
backend/app/models/: __init__.py  message.py  participant.py  room.py
backend/app/schemas/: __init__.py  message.py  participant.py  room.py
backend/app/services/: websocket_manager.py
backend/backend/: pyproject.toml
docs/issues/: registration_error.md
frontend/: Dockerfile.frontend  package.json  vite.config.js
frontend/src/: App.jsx  chat.css  index.css  main.jsx
frontend/src/components/: ChatRoom.jsx  LoginScreen.jsx  MessageInput.jsx  MessageList.jsx  ParticipantList.jsx  RegisterScreen.jsx  RoomList.jsx
frontend/src/contexts/: AuthContext.jsx
frontend/src/services/: ApiService.js  WebSocketService.js
